# adrg

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  SECURITY.md  adrg.py  adrg.service  config.yaml  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  pypi-publish.yml
modules/: __init__.py  cgroup.py  docker_control.py  media_client.py  notifier.py  preflight.py  qbittorrent_client.py  sensors.py  state.py  webhook_server.py
